# dask_features

./: .gitignore  Primitives_Trend.py  README.md  dask_and_features.py  dask_try.py  pyproject.toml  try_batch_analyse.py
data/: chemical_analytic_data.csv  chemical_analytic_data.ods  chemical_batch_data.csv  chemical_batch_data.ods  chemical_batch_syn_data.ods  flightjson_1.csv  flightjson_10.csv  flightjson_11.csv  flightjson_12.csv  flightjson_2.csv  flightjson_3.csv  flightjson_4.csv  flightjson_5.csv  flightjson_6.csv  flightjson_7.csv  flightjson_8.csv  flightjson_9.csv
